Fix chrome bug where profile dropdown was invisible (#219)

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -2301,7 +2301,6 @@ sup {
   color: white;
   font-size: 0.875rem;
   font-weight: normal;
-  line-height: 1;
   padding: 20px;
 }
 
